# Threat-Intelligence-Backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 19739ba750de_create_initial_tables.py  841eb27834b7_create_initial_tables.py  9c7a1de4f2a0_add_malware_threat_actor_contributor_tables.py  af6710cc6a49_create_initial_tables.py  b9a2f1c4d8e7_add_api_key_lifecycle_fields.py  c3f1a2b4d5e6_add_organisation_fields_and_nullable_apikeys.py  d2f7cad1aa29_create_initial_tables.py  d4f6e2a1b3c4_add_iocstatus_validated.py  dc5689c2bf86_create_initial_tables.py  merge_9c7a1de4f2a0_c3f1a2b4d5e6.py
app/: config.py  main.py
app/api/v1/: admin.py  contributor_auth.py  deps.py  iocs.py  register.py  submissions.py
app/db/: session.py
app/models/: __init__.py  blockchain_record.py  contributor_user.py  ioc.py  malware_sample.py  organisation.py  register.py  threat_actor.py
app/schemas/: assets.py  ioc.py  malware.py  organisation.py  threat_actor.py
app/services/: asset_service.py  auth_service.py  email_service.py  ioc_service.py  malware_service.py  threat_actor_service.py
tests/: test_submission_services.py
